--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jud-vue-loader",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
     "consolidate": "^0.14.0",
     "hash-sum": "^1.0.2",
@@ -16,8 +16,8 @@
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.10",
     "vue-template-es2015-compiler": "^1.2.2",
-    "jud-styler": "^0.0.1",
-    "jud-template-compiler": "^0.0.1"
+    "jud-styler": "latest",
+    "jud-template-compiler": "latest"
   },
   "description": "jud vue loader",
   "main": "index.js",
